Mobil uyumluluk için PDF görüntülemeyi Google Docs Viewer ile güncellendi

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 <body>
     <div id="pdf-wrapper">
         <div class="pdf-page-container active"> <!-- İlk PDF başlangıçta aktif -->
-            <iframe src="Türk Dili ve Edebiyatı Sınav Konuları ve Örnekleri.pdf"></iframe>
+            <iframe src="https://docs.google.com/gview?url=https://raw.githubusercontent.com/meknoctivaglim/26mayis/main/T%C3%BCrk%20Dili%20ve%20Edebiyat%C4%B1%20S%C4%B1nav%20Konular%C4%B1%20ve%20%C3%96rnekleri.pdf&embedded=true"></iframe>
         </div>
         <div class="pdf-page-container">
-            <iframe src="Almanca Sınav Hazırlık Notları.pdf"></iframe>
+            <iframe src="https://docs.google.com/gview?url=https://raw.githubusercontent.com/meknoctivaglim/26mayis/main/Almanca%20S%C4%B1nav%20Haz%C4%B1rl%C4%B1k%20Notlar%C4%B1.pdf&embedded=true"></iframe>
         </div>
         <!-- Daha fazla PDF eklenecekse buraya yeni .pdf-page-container div'leri ekleyin -->
     </div>
